refactor: Improve logging by using class references in log messages and streamline equipment resolution logic